--- a/homepage.css
+++ b/homepage.css
@@ -3,6 +3,81 @@
     margin: 0px;
     font-family: 'Montserrat', sans-serif !important;
 }
+
+/* image-cont */
+#image-cont_1{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid red;
+    background-color: rgba(0, 0, 0, 0.877);
+}
+
+      
+
+    .image {
+    position: relative;
+    width: 50%;
+}
+.image__img2{
+    display: flex;
+    height: 326px;
+    overflow: hidden;
+}
+
+.image__img {
+    display: flex;        
+     width: 100%;
+}
+
+.image__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    font-family: 'Quicksand', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+
+.image__overlay--blur {
+    backdrop-filter: blur(5px);
+}
+
+.image__overlay--primary {
+    background: grey;
+}
+
+.image__overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+
+.image__overlay:hover {
+    opacity: 1;
+}
+
+.image__overlay:hover > * {
+    transform: translateY(0);
+}
+
+.image__title {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.image__description {
+    font-size: 1.25em;
+    margin-top: 0.25em;
+}
+
+
 #first-footer{
     display: flex;
     color: white;
