--- a/homepage.css
+++ b/homepage.css
@@ -76,7 +76,43 @@
     font-size: 1.25em;
     margin-top: 0.25em;
 }
+/* sliding image */
+.slideshow{
+    display: flex;
+    flex-direction: row-reverse;
+    border: 1px solid orange;
+    background-attachment: fixed;
+    background-color: black;
+}
+#slideimage{
+width: 35%;
+height: 300px;
+border: 1px solid red;
 
+
+}
+.box{
+display: inline;
+width: 80%;
+border: 1px solid greenyellow;
+/* margin: 10px; */
+padding: 15px;
+color: rgba(0, 0, 0, 0.877);
+
+}
+.discriptin{
+margin: 100px;
+color:red;
+
+}
+.line{
+    width: 280px;
+    height: 4px;
+    background-color: aliceblue;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 #first-footer{
     display: flex;
@@ -180,3 +216,5 @@ p{
 .icons>div{
     margin: 8px;
 }
+
+
