Made changes in home1.html hom1.css and home1.js please make changes to class and id after changes accordingly

--- a/home1.css
+++ b/home1.css
@@ -128,13 +128,14 @@ li {
 .container {
   width: 100%;
   /* margin-left: 5%;
-    margin-right: 5%; */
+  margin-right: 5%; */
   overflow-x: hidden;
   display: flex;
   /* justify-content: center; */
   align-items: center;
   position: relative;
   flex-direction: column;
+  margin-top: 2%;
 }
 .small-container {
   width: 80%;
@@ -231,4 +232,87 @@ ul li::before {
 #heading-1 {
   color: white;
   margin-bottom: 2%;
+}
+.box-3 > img {
+  height: 100%;
+  object-fit: cover;
+}
+.box-4 > img {
+  object-fit: contain;
+}
+.outerbox {
+  width: 90%;
+  background-color: #606060;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3%;
+  margin-top: 3%;
+  box-sizing: border-box;
+}
+.inner-head {
+  color: white;
+  margin: 2%;
+}
+.innerbox {
+  width: 100%;
+  background-color: #e6e6fa;
+  display: flex;
+  position: relative;
+}
+.shop-now-btn {
+  background-color: #ff0000;
+  color: white;
+  border-radius: 15px;
+  border: none;
+  padding: 5px 25px;
+  font-weight: bold;
+  width: 150px;
+  margin-top: 3%;
+}
+.inner-left {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.in-img > img {
+  border-radius: 50%;
+  width: 100%;
+  transition: 5s;
+}
+.in-img {
+  width: 60%;
+  transition: 1s;
+  padding: 5%;
+}
+.inner-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding-right: 5%;
+}
+.inner-right-head {
+  font-weight: bolder;
+  padding-bottom: 2%;
+  transition: 0.5s;
+}
+.inner-right-content {
+  color: #231f20;
+  padding-top: 2%;
+  line-height: 150%;
+  transition: 0.5s;
+}
+#left-arrow-red5 {
+  left: 0;
+  top: 120px;
+}
+#right-arrow-red5 {
+  right: 0;
+  top: 120px;
 }
