--- a/home1.css
+++ b/home1.css
@@ -94,7 +94,22 @@ li {
   width: 30%;
   padding-left: 10%;
 }
-
+#cart {
+  position: relative;
+}
+.cart-item {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #ff0000;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+  font-size: small;
+  right: 25px;
+  top: 25px;
+}
+/* slider css */
 .slider {
   width: 100%;
   height: 50rem;
