--- a/home1.css
+++ b/home1.css
@@ -127,19 +127,34 @@ li {
 
   transition: transform 1s;
 }
-
+button {
+  cursor: pointer;
+}
+#marquee-text {
+  font-size: xx-large;
+  font-weight: bold;
+  color: white;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+.text-stroke {
+  -webkit-text-stroke: 1px white;
+  font-weight: bold;
+  background-color: black;
+  margin-left: 3%;
+}
 #left-arrow {
   position: absolute;
   width: 60px;
   z-index: 1;
-  top: 200px;
+  top: 300px;
   left: 20px;
 }
 #right-arrow {
   position: absolute;
   width: 60px;
   z-index: 1;
-  top: 200px;
+  top: 300px;
   right: 20px;
 }
 .container {
