--- a/earn.css
+++ b/earn.css
@@ -1,7 +1,7 @@
 #image_earn{
     display: flexbox;
     border: 1px solid red;
-    background-color: #283042;
+    background-color: #0f1013;
 }
 #image_earn>div{
     text-align: center;
@@ -25,7 +25,8 @@ html{
 section{
     width: 100%;
     height: 100vh;
-    background-color:  #3c4035;
+    margin-top: autoS;
+    background-color:  #0f1013;;
     display: flex;
     text-align: center;
     justify-content: center;
