--- a/home1.css
+++ b/home1.css
@@ -7,7 +7,7 @@
 body {
   overflow-x: hidden;
 }
-*/ .main-div {
+.main-div {
   width: 100%;
   background-color: black;
 }
@@ -430,7 +430,7 @@ button {
   width: 100px;
 }
 .sidebar {
-  width: 400px;
+  width: 500px;
   background-color: white;
   height: 100vh;
   color: black;
@@ -443,6 +443,7 @@ button {
 .sidebartoggle {
   transform: translateX(100%);
 }
+
 .cart-header {
   background-color: #f5f5f5;
   padding: 10px;
